<resources>
    <string name="app_name">Talley</string>
    <string name="logo_description">Talley Logo</string>

    <!--  Headers  -->
    <string name="header_create_profile">Create your profile</string>
    <string name="header_devices">My Devices</string>
    <string name="header_add_a_device">Add a Device</string>
    <string name="header_device_image">Device Image</string>
    <string name="header_device_receipt">Device Receipt</string>
    <string name="header_delete">Confirm Delete</string>
    <string name="header_settings">Settings</string>
    <string name="header_notifications">Notifications</string>
    <string name="header_enable_notifications">Enable Notifications</string>
    <string name="header_notification_5th">5th Device Created</string>
    <string name="header_notification_10th">10th Device Created</string>
    <string name="header_notification_25th">25th Device Created</string>
    <string name="header_notification_50th">50th Device Created</string>
    <string name="header_notification_100th">100th Device Created</string>
    <string name="header_add">Add</string>
    <string name="header_add_disabled">Add device disabled</string>


    <!--  Text Prompts  -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email_address">Email Address</string>
    <string name="prompt_contact_number">Contact Number</string>
    <string name="prompt_purchase_date">Purchased</string>
    <string name="prompt_warranty_period">Warranty Period</string>
    <string name="prompt_delete_device">Are you sure you want to delete?</string>
    <string name="prompt_device_name">Device Name</string>
    <string name="prompt_device_type">Device Type</string>
    <string name="prompt_device_vendor">Vendor</string>
    <string name="prompt_device_price">Price</string>
    <string name="prompt_device_warranty_period">Warranty Period</string>
    <string name="prompt_device_date_of_purchase">Date of Purchase</string>

    <!--  Format Strings  -->
    <string name="format_purchase_date">Purchased: %1$s</string>
    <string name="format_warranty_period">Warranty Period: %1$s</string>
    <string name="format_device_created_notification">Device created</string>
    <string name="format_device_number_created_notification">You have now created %1$s devices!</string>

    <!--  Button Text  -->
    <string name="button_save">Save</string>
    <string name="button_import">Import from file</string>


    <!--  Descriptions  -->
    <string name="description_clock">Time remaining</string>
    <string name="description_price">Price</string>
    <string name="description_expand_arrow">Show/Hide more details</string>
    <string name="description_device_icon">Device Icon</string>
    <string name="description_device_image">Device Image</string>
    <string name="description_device_expand_collapse">Expand/Collapse Device Details</string>
    <string name="description_device_delete">Delete Device</string>
    <string name="description_settings">Settings</string>
    <string name="description_get_location">Get Location</string>
    <string name="description_notification_frequency">Set the notification frequency</string>
    <string name="description_send_email">Send email…</string>
    <string name="description_email_subject">Talley - %1$s</string>

    <!--  Errors  -->
    <string name="error_failed_to_save_file">Failed to save file</string>
    <string name="error_cannot_read_file">Cannot read file</string>
    <string name="error_no_places_found">No nearby places found</string>
</resources>