<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="settings_screen"
    app:title="@string/header_settings">

    <PreferenceCategory app:title="@string/header_notifications">

        <SwitchPreferenceCompat
            app:key="enable_notifications"
            app:title="@string/header_enable_notifications" />

        <SwitchPreferenceCompat
            app:key="5th_device"
            app:dependency="enable_notifications"
            app:title="@string/header_notification_5th" />

        <SwitchPreferenceCompat
            app:key="10th_device"
            app:dependency="enable_notifications"
            app:title="@string/header_notification_10th" />


        <SwitchPreferenceCompat
            app:key="25th_device"
            app:dependency="enable_notifications"
            app:title="@string/header_notification_25th" />


        <SwitchPreferenceCompat
            app:key="50th_device"
            app:dependency="enable_notifications"
            app:title="@string/header_notification_50th" />

        <SwitchPreferenceCompat
            app:key="100th_device"
            app:dependency="enable_notifications"
            app:title="@string/header_notification_100th" />


    </PreferenceCategory>

</PreferenceScreen>
