<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="add"
        android:enabled="true"
        android:icon="@drawable/ic_add_black_24dp"
        android:shortcutShortLabel="@string/header_add"
        android:shortcutLongLabel="@string/header_add_a_device"
        android:shortcutDisabledMessage="@string/header_add_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="nz.ac.uclive.itw21.project2"
            android:targetClass="nz.ac.uclive.itw21.project2.ui.CreateDeviceActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.add_device" />
    </shortcut>
    <!-- Specify more shortcuts here. -->
</shortcuts>