<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.CreateProfileActivity">

    <ImageView
        android:id="@+id/app_logo_createProfile"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo_animate"
        app:layout_constraintBottom_toTopOf="@+id/text_layout_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/prompt_name"
        android:textColorHint="@color/loginFormDetails"
        app:layout_constraintBottom_toTopOf="@+id/text_layout_email"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_text_input"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/prompt_email_address"
        android:textColorHint="@color/loginFormDetails"
        app:layout_constraintBottom_toTopOf="@+id/text_layout_contact_number"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_text_input"
            android:inputType="textWebEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_contact_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/prompt_contact_number"
        android:textColorHint="@color/loginFormDetails"
        app:layout_constraintBottom_toTopOf="@+id/button_save_and_continue"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_text_input"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_save_and_continue"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginBottom="80dp"
        android:elevation="0dp"
        android:onClick="saveProfile"
        android:shadowColor="@color/transparent"
        android:text="@string/button_save"
        android:textAllCaps="false"
        android:textColor="@color/loginFormDetailsMedium"
        android:textSize="20sp"
        android:theme="@style/MtButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left" />

</androidx.constraintlayout.widget.ConstraintLayout>