<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:foreground="?android:attr/selectableItemBackground"
    android:background="?android:attr/selectableItemBackground">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/default_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/device_icon_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/device_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="@+id/vertical_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:srcCompat="@drawable/device_other"
            android:contentDescription="@string/description_device_icon" />


        <View
            android:id="@+id/vertical_line"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="@color/lightGrey"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toEndOf="@+id/device_icon_background"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto"
                android:gravity="start"
                android:singleLine="true"
                android:text="@string/prompt_device_name"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/darkGrey"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/device_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:ellipsize="end"
                android:fontFamily="@font/roboto"
                android:gravity="start"
                android:singleLine="true"
                android:text="@string/prompt_device_type"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/mediumGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/device_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/clock_image"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:tint="@color/mediumGrey"
            android:contentDescription="@string/description_clock"
            app:layout_constraintEnd_toStartOf="@+id/device_warranty_period"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:srcCompat="@drawable/ic_access_time_black_24dp" />

        <TextView
            android:id="@+id/device_warranty_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/prompt_warranty_period"
            android:textColor="@color/mediumGrey"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/dollar_image"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/description_price"
            android:tint="@color/mediumGrey"
            app:layout_constraintEnd_toStartOf="@+id/device_price"
            app:layout_constraintTop_toBottomOf="@+id/device_warranty_period"
            app:srcCompat="@drawable/ic_attach_money_black_24dp" />

        <TextView
            android:id="@+id/device_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/prompt_device_price"
            android:textColor="@color/mediumGrey"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/device_warranty_period" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="80dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="12dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="12dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="76dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
